<resources>
    <string name="app_name">DH Desafio Firebase</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember">Remember</string>
    <string name="log_in">LOG IN</string>
    <string name="create_account">Create account</string>
    <string name="name">Name</string>
    <string name="repeate_password">Repeate Password</string>
    <string name="titulo">Titulo</string>
    <string name="ano">Ano</string>
    <string name="adicionar_jogo">Adicionar Jogo</string>
    <string name="capa_jogo">Capa Jogo</string>
    <string name="ano_lancamento">Ano Lançamento:</string>
    <string name="descricao">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type andLorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type andLorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem IpsumDescricao</string>
    <string name="save_game">SAVE GAME</string>
    <string name="created_at">Created at</string>
    <string name="description">Description</string>
    <string name="adicionar_capa_jogo">Adicionar Capa Jogo</string>
    <string name="search_games">Search Games</string>
</resources>