<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardJogo"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="8dp"
    android:layout_marginTop="14dp"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/selectableItemBackground"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgCapa"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/capa_jogo"
            android:scaleType="centerCrop"
            android:src="@drawable/splashfirebase" />

        <TextView
            android:id="@+id/tvTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="15dp"
            android:text="@string/titulo"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/tvAnoLancamento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/ano"
            android:layout_marginBottom="15dp"
            android:textColor="@color/ocean"
            android:textSize="23sp" />
    </LinearLayout>
</androidx.cardview.widget.CardView>